--- a/hookform/src/App.css
+++ b/hookform/src/App.css
@@ -40,24 +40,40 @@
 .read-the-docs {
   color: #888;
 }
+
 form {
   display: flex;
   flex-direction: column;
   max-width: 300px;
   margin: 0 auto;
+  align-items: center;
 }
 
 input[type="text"],
-button {
+button[type="submit"] {
   margin-bottom: 10px;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #000;
   border-radius: 4px;
+  width: 100%;
+  color: #000;
+  background-color: #fff;
+}
+
+button[type="submit"] {
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #fff;
+  color: #000;
 }
 
 p {
   margin-top: 5px;
-  color: red;
+  color: #000;
 }
 
 nav ul {
@@ -73,9 +89,33 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: #000;
 }
 
 nav a:hover {
   text-decoration: underline;
+}
+
+
+
+
+.Step3 {
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.Step3 label {
+  font-weight: bold;
+}
+
+.Step3 span {
+  margin-left: 10px;
+}
+
+.form-state-value {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
 }
